fixed a bit of stuff also i am working on this again so activity go brrrr

--- a/.classpath
+++ b/.classpath
@@ -32,7 +32,7 @@
 	</classpathentry>
 	<classpathentry kind="output" path="bin/default"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16/"/>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.17.1-37.1.0_mapped_official_1.17.1/forge-1.17.1-37.1.0_mapped_official_1.17.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.17.1-37.1.0_mapped_official_1.17.1/forge-1.17.1-37.1.0_mapped_official_1.17.1.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.17.1-37.1.1_mapped_official_1.17.1/forge-1.17.1-37.1.1_mapped_official_1.17.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.17.1-37.1.1_mapped_official_1.17.1/forge-1.17.1-37.1.1_mapped_official_1.17.1.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
@@ -64,20 +64,20 @@
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/securejarhandler/0.9.54/abbfe7c00af7379dd31f482f21d36713da517c00/securejarhandler-0.9.54-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/securejarhandler/0.9.54/24b670f2c026ec9777e64a2c2126ebc8635dbe8d/securejarhandler-0.9.54.jar">
 		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlloader/1.17.1-37.1.0/9f881a6cec216b13bc97383e395672781c0c5ea6/fmlloader-1.17.1-37.1.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlloader/1.17.1-37.1.0/7f0aff950b930140c28456067b617bb3d108f338/fmlloader-1.17.1-37.1.0.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/modlauncher/9.0.7/77f1c49820136ba07fde51fe760c7cb714067225/modlauncher-9.0.7-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/modlauncher/9.0.7/ebe8650527b513823874449e054db053b686b494/modlauncher-9.0.7.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
+			<attribute name="gradle_used_by_scope" value=""/>
 		</attributes>
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.openjdk.nashorn/nashorn-core/15.3/d1b08eaf27fa4468ea714555377d74079b8b9e99/nashorn-core-15.3-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.openjdk.nashorn/nashorn-core/15.3/43977e804697048fc8d81d333a36c17d07a5b3dd/nashorn-core-15.3.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlloader/1.17.1-37.1.1/c58327590fc05b4470e2a5d6786580e01eac1a93/fmlloader-1.17.1-37.1.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlloader/1.17.1-37.1.1/c60816266dffed18933396bc31e7019a5ca76e1c/fmlloader-1.17.1-37.1.1.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/modlauncher/9.0.24/3421556ce51d1e355734f920c06201312d1b84ea/modlauncher-9.0.24-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/modlauncher/9.0.24/d581f56ce7e1f1bc5acb467918cb976f440604d/modlauncher-9.0.24.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
@@ -122,22 +122,22 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlcore/1.17.1-37.1.0/2fad523d1e5ee079947d82de3b34cc460a6b5d6e/fmlcore-1.17.1-37.1.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlcore/1.17.1-37.1.0/2e09a5c34c7ca645bdf1f29d91a7048d587b20f0/fmlcore-1.17.1-37.1.0.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlcore/1.17.1-37.1.1/a753578be3beca5541678a58fad14752ee258abf/fmlcore-1.17.1-37.1.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/fmlcore/1.17.1-37.1.1/7cb4a179d7404ca3846936742ae562f43f38db1a/fmlcore-1.17.1-37.1.1.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/eventbus/5.0.3/22b4fa2b3ee4106e29034346348ce6bc5b8d244c/eventbus-5.0.3-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/eventbus/5.0.3/f2317ed9d19271be8727a71ae3e5dfeb62715594/eventbus-5.0.3.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/eventbus/5.0.7/893e672b5a7e768aeaf0fd4a6104021a4c5a7232/eventbus-5.0.7-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/eventbus/5.0.7/5589e7511c4993054e6a80890618b46ed53519a0/eventbus-5.0.7.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/forgespi/4.0.10/6e3a5833aa9ece38fd901b6fe0187157a4bf9ae0/forgespi-4.0.10-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/forgespi/4.0.10/e08fb9a9e485abbbd380516c222e2b502eb0718e/forgespi-4.0.10.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/forgespi/4.0.11/6ca77f2060059bdace81c3606d774cee5d40d451/forgespi-4.0.11-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/forgespi/4.0.11/beba03c49f418c8d66aae30a6df69bde4fce2f18/forgespi-4.0.11.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/coremods/5.0.1/a668cc3a77a31a42d9763d37fb348acbaa968f13/coremods-5.0.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/coremods/5.0.1/386b00279628b105b2d507539c46e134e96f6237/coremods-5.0.1.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/coremods/5.0.2/eaf5c5d7d2a7962d59cd19099f96d39c1c5d4a8d/coremods-5.0.2-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/coremods/5.0.2/ca04eeee6c3764c151b2a2efa675057a7531acc4/coremods-5.0.2.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
@@ -177,19 +177,19 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-core/2.14.1/7f640e4855733d9532eed15af62c54956e7b8224/log4j-core-2.14.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-core/2.14.1/9141212b8507ab50a45525b545b39d224614528b/log4j-core-2.14.1.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-core/2.15.0/9f65403ec51628737d799ebf1a02d56e4cbcd81d/log4j-core-2.15.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-core/2.15.0/ba55c13d7ac2fd44df9cc8074455719a33f375b9/log4j-core-2.15.0.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value=""/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-slf4j18-impl/2.15.0/a97557c733710589929407ba23f0449547a47a60/log4j-slf4j18-impl-2.15.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-slf4j18-impl/2.15.0/88f72ad364bfc3a7cf43186fc17212f2b4bb8d97/log4j-slf4j18-impl-2.15.0.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-slf4j18-impl/2.14.1/e4cebbad5a5cbe091090346bcc3618bff8f5e73d/log4j-slf4j18-impl-2.14.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-slf4j18-impl/2.14.1/312b4d91b21160b9fab43600fa787f31e8cab930/log4j-slf4j18-impl-2.14.1.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-api/2.15.0/b0b2c8ee48c4c57804056fe18494e61bb18404ab/log4j-api-2.15.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-api/2.15.0/4a5aa7e55a29391c6f66e0b259d5189aa11e45d0/log4j-api-2.15.0.jar">
 		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-api/2.14.1/b2327c47ca413c1ec183575b19598e281fcd74d8/log4j-api-2.14.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-api/2.14.1/cd8858fbbde69f46bce8db1152c18a43328aae78/log4j-api-2.14.1.jar">
-		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
+			<attribute name="gradle_used_by_scope" value=""/>
 		</attributes>
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.jline/jline-reader/3.12.1/88d7d2011ebec345d0a5c6237be1e7be864c7ec8/jline-reader-3.12.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.jline/jline-reader/3.12.1/4382ab1382c7b6f379377ed5f665dc2f6e1218bc/jline-reader-3.12.1.jar">
@@ -227,12 +227,12 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/javafmllanguage/1.17.1-37.1.0/45f32e3578cf7026db4e8338b4caf0eea50b3a1/javafmllanguage-1.17.1-37.1.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/javafmllanguage/1.17.1-37.1.0/fa6058bfbf3e3ec9934e8316f9d2c775bbc25529/javafmllanguage-1.17.1-37.1.0.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/javafmllanguage/1.17.1-37.1.1/30cc2be23596b8857d9fa210c85ba9f2487e779a/javafmllanguage-1.17.1-37.1.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/javafmllanguage/1.17.1-37.1.1/f9646cd6a35efab2e595efef2858fcb325501be3/javafmllanguage-1.17.1-37.1.1.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/mclanguage/1.17.1-37.1.0/d121c957ae899cbd4e402f3823377cb2970ac487/mclanguage-1.17.1-37.1.0-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/mclanguage/1.17.1-37.1.0/53c75aa50a8b03a8b25493de960b1b897dc6a634/mclanguage-1.17.1-37.1.0.jar">
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/mclanguage/1.17.1-37.1.1/ff603f59010039fa48e3966bd2c0d44e907b15a8/mclanguage-1.17.1-37.1.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/mclanguage/1.17.1-37.1.1/5f79912fa14069175fd01a16fea8ee349433e9b6/mclanguage-1.17.1-37.1.1.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
@@ -403,6 +403,21 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.glassfish/javax.json/1.0.4/ef782abad0d3f1d30644c4023a6bbc6fe371e23a/javax.json-1.0.4-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.glassfish/javax.json/1.0.4/3178f73569fd7a1e5ffc464e680f7a8cc784b85a/javax.json-1.0.4.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/securejarhandler/0.9.61/e03849da6b68d9d91ebb453213032487b03b944b/securejarhandler-0.9.61-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/securejarhandler/0.9.61/75cc4baec8f8e8f539c91e74ab50a59f0214bc33/securejarhandler-0.9.61.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-core/2.17.1/311c00d3764db7fa3ba5f26d0acb5840e52454aa/log4j-core-2.17.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-core/2.17.1/779f60f3844dadc3ef597976fcb1e5127b1f343d/log4j-core-2.17.1.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-api/2.17.1/d23d37cc41300a7f6eba7813855dbb224e2a3177/log4j-api-2.17.1-sources.jar" kind="lib" path="C:/Users/manan/.mcreator/gradle/caches/modules-2/files-2.1/org.apache.logging.log4j/log4j-api/2.17.1/d771af8e336e372fb5399c99edabe0919aeaf5b2/log4j-api-2.17.1.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
